# matrix-product

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_cache_blocking.cpp
src/results/: blocked_threads_var.txt  blocs_var.txt  perf_bloc_var.txt  perf_layout_var.txt  size_var.txt  threads_var.txt
src/scripts/: Layout.py  Layout.sh  bloc_var_perf.py  bloc_var_perf.sh  matrix_var.sh  plot_blocs_var.py  plot_matrix_var.py  plot_threads_var.py  run_scaling.sh  taille_bloc.sh
